--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body id="corpo" onload="selecionaTema()">
     <div id="container" class="container">
       <input type="checkbox" id="checkbox"  class="check" onclick="selecionaTema()" checked/>
-      <label for="checkbox" id="label" class="interruptor">
-        <span id="slider" class="bola"></span>
+      <label for="checkbox" id="interruptor" class="interruptor">
+        <span id="bola" class="bola"></span>
       </label>
     </div>
   </body>
